--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,16 +18,17 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView11"
+            <Button
+                android:id="@+id/button10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="" />
+                android:onClick="OpenSetting"
+                android:text="Menu" />
 
             <TextView
                 android:id="@+id/textViewCountStack"
-                android:layout_width="wrap_content"
+                android:layout_width="277dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="" />
@@ -49,6 +50,7 @@
             android:scrollbars = "vertical"
             android:layout_width="match_parent"
             android:ellipsize="marquee"
+            android:textAlignment="textEnd"
             android:layout_height="176dp"
             android:text="" />
         </ScrollView>
@@ -85,6 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="UndoOperation"
                 android:text="Undo" />
 
             <Button
